[Utils]
- added color support for tables